Development mode for Horde_Kolab_Storage-2.0.3

--- a/package.xml
+++ b/package.xml
@@ -12,9 +12,9 @@
   <active>yes</active>
  </lead>
  <date>2012-11-27</date>
- <time>11:53:19</time>
+ <time>11:54:25</time>
  <version>
-  <release>2.0.2</release>
+  <release>2.0.3</release>
   <api>2.0.0</api>
  </version>
  <stability>
@@ -23,9 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [gwr] Add a time based snychronization strategy (Bug #11590).
-* [gwr] Correct cache update after move (Bug #11305).
-* [gwr] Remove deleted objects from the cache (Bug #11674).
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1283,6 +1281,19 @@
 * [gwr] Add a time based snychronization strategy (Bug #11590).
 * [gwr] Correct cache update after move (Bug #11305).
 * [gwr] Remove deleted objects from the cache (Bug #11674).
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.0.3</release>
+    <api>2.0.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2012-11-27</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
