--- a/package.xml
+++ b/package.xml
@@ -23,7 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Retrieve status changes during running requests (Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;, Bug #12589).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1319,7 +1319,7 @@
    <date>2013-03-05</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Retrieve status changes during running requests (Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;, Bug #12589).
    </notes>
   </release>
  </changelog>
