--- a/package.xml
+++ b/package.xml
@@ -12,9 +12,9 @@
   <active>yes</active>
  </lead>
  <date>2013-08-27</date>
- <time>12:45:55</time>
+ <time>12:52:48</time>
  <version>
-  <release>2.0.5</release>
+  <release>2.0.6</release>
   <api>2.0.0</api>
  </version>
  <stability>
@@ -23,8 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [jan] Catch errors in Kolab_Storage_Driver_Imap#fetchComplete() (Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;, Bug #12584).
-* [jan] Retrieve status changes during running requests (Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;, Bug #12589).
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1322,6 +1321,19 @@
    <notes>
 * [jan] Catch errors in Kolab_Storage_Driver_Imap#fetchComplete() (Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;, Bug #12584).
 * [jan] Retrieve status changes during running requests (Thomas Jarosch &lt;thomas.jarosch@intra2net.com&gt;, Bug #12589).
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.0.6</release>
+    <api>2.0.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2013-08-27</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
