[mms] Fix grabbing annotation list from IMAP server.
See: http://markmail.org/message/as2nkdmnjyamnki3

--- a/package.xml
+++ b/package.xml
@@ -23,7 +23,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-*
+* [mms] Fix grabbing annotation list from IMAP server.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1333,7 +1333,7 @@
    <date>2013-08-27</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-*
+* [mms] Fix grabbing annotation list from IMAP server.
    </notes>
   </release>
  </changelog>
