--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,7 @@
  </lead>
  <date>2015-01-09</date>
  <version>
-  <release>2.1.2</release>
+  <release>2.1.3</release>
   <api>2.1.0</api>
  </version>
  <stability>
@@ -22,8 +22,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [jan] Support loading translations from Composer-installed package.
-* [jan] Improve PSR-2 compatibility.
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1356,6 +1355,19 @@
    <notes>
 * [jan] Support loading translations from Composer-installed package.
 * [jan] Improve PSR-2 compatibility.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.1.3</release>
+    <api>2.1.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2015-01-09</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
