[jan] Fix deleting object attachments from cache (Bug #13268).

--- a/package.xml
+++ b/package.xml
@@ -22,7 +22,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Fix deleting object attachments from cache (Bug #13268).
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1367,7 +1367,7 @@
    <date>2015-01-09</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Fix deleting object attachments from cache (Bug #13268).
    </notes>
   </release>
  </changelog>
