Development mode for Horde_Kolab_Storage-2.1.4

--- a/package.xml
+++ b/package.xml
@@ -13,7 +13,7 @@
  </lead>
  <date>2015-04-13</date>
  <version>
-  <release>2.1.3</release>
+  <release>2.1.4</release>
   <api>2.1.0</api>
  </version>
  <stability>
@@ -22,7 +22,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [jan] Fix deleting object attachments from cache (Bug #13268).
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1368,6 +1368,19 @@
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * [jan] Fix deleting object attachments from cache (Bug #13268).
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.1.4</release>
+    <api>2.1.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2015-04-13</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
