--- a/package.xml
+++ b/package.xml
@@ -11,7 +11,7 @@
   <email>p@rdus.de</email>
   <active>yes</active>
  </lead>
- <date>2015-06-12</date>
+ <date>2015-06-16</date>
  <version>
   <release>2.1.5</release>
   <api>2.1.0</api>
@@ -188,6 +188,7 @@
        <dir name="Synchronization">
         <file name="OncePerSession.php" role="php" />
         <file name="TimeBased.php" role="php" />
+        <file name="Token.php" role="php" />
        </dir> <!-- /lib/Horde/Kolab/Storage/Synchronization -->
        <file name="Base.php" role="php" />
        <file name="Cache.php" role="php" />
@@ -830,6 +831,7 @@
    <install as="Horde/Kolab/Storage/QuerySet/Uncached.php" name="lib/Horde/Kolab/Storage/QuerySet/Uncached.php" />
    <install as="Horde/Kolab/Storage/Synchronization/OncePerSession.php" name="lib/Horde/Kolab/Storage/Synchronization/OncePerSession.php" />
    <install as="Horde/Kolab/Storage/Synchronization/TimeBased.php" name="lib/Horde/Kolab/Storage/Synchronization/TimeBased.php" />
+   <install as="Horde/Kolab/Storage/Synchronization/Token.php" name="lib/Horde/Kolab/Storage/Synchronization/Token.php" />
    <install as="locale/Horde_Kolab_Storage.pot" name="locale/Horde_Kolab_Storage.pot" />
    <install as="locale/ar/LC_MESSAGES/Horde_Kolab_Storage.mo" name="locale/ar/LC_MESSAGES/Horde_Kolab_Storage.mo" />
    <install as="locale/ar/LC_MESSAGES/Horde_Kolab_Storage.po" name="locale/ar/LC_MESSAGES/Horde_Kolab_Storage.po" />
@@ -1396,7 +1398,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2015-06-12</date>
+   <date>2015-06-16</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
 * 
