--- a/package.xml
+++ b/package.xml
@@ -13,8 +13,8 @@
  </lead>
  <date>2015-06-16</date>
  <version>
-  <release>2.1.5</release>
-  <api>2.1.0</api>
+  <release>2.2.0</release>
+  <api>2.2.0</api>
  </version>
  <stability>
   <release>stable</release>
@@ -22,7 +22,9 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [mjr] Implement a token based syncronization strategy for servers with QRESYNC/MODSEQ support.
+* [mjr] Improve debug logging.
+* [mjr] Add full Horde_History support for better Kolab&lt;-&gt;Horde&lt;-&gt;Sync client support.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1393,15 +1395,17 @@
   </release>
   <release>
    <version>
-    <release>2.1.5</release>
-    <api>2.1.0</api></version>
+    <release>2.2.0</release>
+    <api>2.2.0</api></version>
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
    <date>2015-06-16</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [mjr] Implement a token based syncronization strategy for servers with QRESYNC/MODSEQ support.
+* [mjr] Improve debug logging.
+* [mjr] Add full Horde_History support for better Kolab&lt;-&gt;Horde&lt;-&gt;Sync client support.
    </notes>
   </release>
  </changelog>
