Development mode for Horde_Kolab_Storage-2.2.1

--- a/package.xml
+++ b/package.xml
@@ -19,7 +19,7 @@
  </lead>
  <date>2016-01-02</date>
  <version>
-  <release>2.2.0</release>
+  <release>2.2.1</release>
   <api>2.2.0</api>
  </version>
  <stability>
@@ -28,11 +28,7 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* [mjr] Fix decoding base64 encoded Kolab objects (Bug #14199, mike.gabriel@das-netzwerkteam.de).
-* [mjr] Fix updating Kolab data that contains non 7-bit data (Bug #14201).
-* [mjr] Implement a token based syncronization strategy for servers with QRESYNC/MODSEQ support.
-* [mjr] Improve debug logging.
-* [mjr] Add full Horde_History support for better Kolab&lt;-&gt;Horde&lt;-&gt;Sync client support.
+* 
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1416,6 +1412,19 @@
 * [mjr] Implement a token based syncronization strategy for servers with QRESYNC/MODSEQ support.
 * [mjr] Improve debug logging.
 * [mjr] Add full Horde_History support for better Kolab&lt;-&gt;Horde&lt;-&gt;Sync client support.
+   </notes>
+  </release>
+  <release>
+   <version>
+    <release>2.2.1</release>
+    <api>2.2.0</api></version>
+   <stability>
+    <release>stable</release>
+    <api>stable</api></stability>
+   <date>2016-01-02</date>
+   <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
+   <notes>
+* 
    </notes>
   </release>
  </changelog>
