--- a/package.xml
+++ b/package.xml
@@ -17,7 +17,7 @@
   <email>mrubinsk@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2016-04-05</date>
+ <date>2016-12-16</date>
  <version>
   <release>2.2.3</release>
   <api>2.2.0</api>
@@ -28,7 +28,9 @@
  </stability>
  <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
  <notes>
-* 
+* [jan] Fix detecting large number of messages when logging.
+* [jan] Update German translation.
+* [jan] Update Portuguese translation.
  </notes>
  <contents>
   <dir baseinstalldir="/" name="/">
@@ -1447,10 +1449,12 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2016-04-05</date>
+   <date>2016-12-16</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
-* 
+* [jan] Fix detecting large number of messages when logging.
+* [jan] Update German translation.
+* [jan] Update Portuguese translation.
    </notes>
   </release>
  </changelog>
