--- a/composer.json
+++ b/composer.json
@@ -16,12 +16,12 @@
             "role": "lead"
         }
     ],
-    "version": "2.2.2",
-    "time": "2016-04-05",
+    "version": "2.2.3",
+    "time": "2016-12-16",
     "repositories": [
         {
             "type": "pear",
-            "url": "https://pear.horde.org"
+            "url": "http://pear.horde.org"
         }
     ],
     "require": {
