--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "role": "lead"
         }
     ],
-    "version": "2.2.3",
+    "version": "2.2.4",
     "time": "2016-12-16",
     "repositories": [
         {
@@ -25,21 +25,21 @@
         }
     ],
     "require": {
-        "php": ">=5.3.0,<=8.0.0alpha1",
-        "pear-pear.horde.org/Horde_Cache": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Exception": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Kolab_Format": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Mime": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Translation": ">=2.2.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Support": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Util": ">=2.0.0@stable,<=3.0.0alpha1@stable"
+        "php": "^5.3,<8",
+        "pear-pear.horde.org/Horde_Cache": "^2@stable",
+        "pear-pear.horde.org/Horde_Exception": "^2@stable",
+        "pear-pear.horde.org/Horde_Kolab_Format": "^2@stable",
+        "pear-pear.horde.org/Horde_Mime": "^2@stable",
+        "pear-pear.horde.org/Horde_Translation": "^2.2@stable",
+        "pear-pear.horde.org/Horde_Support": "^2@stable",
+        "pear-pear.horde.org/Horde_Util": "^2@stable"
     },
     "suggest": {
-        "pear-pear.horde.org/Horde_Imap_Client": ">=2.14.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_History": ">=2.0.0@stable,<=3.0.0alpha1@stable",
-        "pear-pear.horde.org/Horde_Test": ">=2.1.0@stable,<=3.0.0alpha1@stable",
+        "pear-pear.horde.org/Horde_Imap_Client": "^2.14@stable",
+        "pear-pear.horde.org/Horde_History": "^2@stable",
+        "pear-pear.horde.org/Horde_Test": "^2.1@stable",
         "pear-pear.php.net/HTTP_Request": "*",
-        "pear-pear.php.net/Net_IMAP": ">=1.1.0@stable",
+        "pear-pear.php.net/Net_IMAP": "^1.1@stable",
         "ext-imap": "*"
     }
 }
