Create CHANGES for all components.

--- a/package.xml
+++ b/package.xml
@@ -17,7 +17,7 @@
   <email>mrubinsk@horde.org</email>
   <active>yes</active>
  </lead>
- <date>2017-10-20</date>
+ <date>2017-10-27</date>
  <version>
   <release>2.2.4</release>
   <api>2.2.0</api>
@@ -43,6 +43,7 @@
         <file name="Trigger.php" role="doc" />
        </dir> <!-- /doc/Horde/Kolab/Storage/OLD -->
        <file name="API.txt" role="doc" />
+       <file name="CHANGES" role="doc" />
        <file name="TODO.rst" role="doc" />
        <file name="usage.txt" role="doc" />
       </dir> <!-- /doc/Horde/Kolab/Storage -->
@@ -732,6 +733,7 @@
  <phprelease>
   <filelist>
    <install as="API.txt" name="doc/Horde/Kolab/Storage/API.txt" />
+   <install as="CHANGES" name="doc/Horde/Kolab/Storage/CHANGES" />
    <install as="examples/list.php" name="doc/Horde/Kolab/Storage/examples/list.php" />
    <install as="OLD/Folder.php" name="doc/Horde/Kolab/Storage/OLD/Folder.php" />
    <install as="OLD/Trigger.php" name="doc/Horde/Kolab/Storage/OLD/Trigger.php" />
@@ -1453,7 +1455,7 @@
    <stability>
     <release>stable</release>
     <api>stable</api></stability>
-   <date>2017-10-20</date>
+   <date>2017-10-27</date>
    <license uri="http://www.horde.org/licenses/lgpl21">LGPL-2.1</license>
    <notes>
    </notes>
