--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
     "name": "horde/kolab-storage",
-    "description": "A package for handling Kolab data stored on an IMAP server",
+    "description": "Kolab data storage library",
     "type": "library",
-    "homepage": "https://pear.horde.org",
+    "homepage": "https://www.horde.org/libraries/Horde_Kolab_Storage",
     "license": "LGPL-2.1",
     "authors": [
         {
@@ -17,7 +17,7 @@
         }
     ],
     "version": "2.2.4",
-    "time": "2017-10-20",
+    "time": "2017-11-11",
     "repositories": [
         {
             "type": "pear",
