--- a/.horde.yml
+++ b/.horde.yml
@@ -11,16 +11,16 @@ type: library
 homepage: https://www.horde.org/libraries/Horde_Kolab_Storage
 authors:
   -
-    name: Gunnar Wrobel
-    user: wrobel
-    email: p@rdus.de
-    active: true
-    role: lead
-  -
     name: Michael J Rubinsky
     user: mrubinsk
     email: mrubinsk@horde.org
     active: true
+    role: lead
+  -
+    name: Gunnar Wrobel
+    user: wrobel
+    email: p@rdus.de
+    active: false
     role: lead
 version:
   release: 2.2.4
